Refactoring `last-child-no-margin` mixin

--- a/src/assets/scss/abstracts/variables/_forms.scss
+++ b/src/assets/scss/abstracts/variables/_forms.scss
@@ -50,6 +50,9 @@ $select-background-image: svg-encode(
 ) !default;
 $select-background-size: 1rem 0.75rem !default;
 
+// Fieldset
+$fieldset-margin: 0 0 1rem !default;
+
 // Legend
 $legend-margin-bottom: 0.5em !default;
 $legend-font-size: 1.25rem !default;
