--- a/src/assets/scss/abstracts/variables/_images.scss
+++ b/src/assets/scss/abstracts/variables/_images.scss
@@ -2,5 +2,7 @@
 // Images
 // =====================================================
 
+$figure-margin: 0 0 1rem !default;
+
 $figcaption-color: $gray-700 !default;
 $figcaption-font-size: $small-font-size !default;
