--- a/src/assets/scss/abstracts/variables/_tables.scss
+++ b/src/assets/scss/abstracts/variables/_tables.scss
@@ -2,6 +2,7 @@
 // Tables
 // =====================================================
 
+$table-margin-bottom: 1rem !default;
 $table-border: 1px solid $gray-300 !default;
 $table-stripped-background-color: $gray-200 !default;
 
