--- a/src/assets/scss/base/reset/_embedded-content.scss
+++ b/src/assets/scss/base/reset/_embedded-content.scss
@@ -4,8 +4,8 @@
 
 // Figure
 figure {
-    @include last-child-no-margin;
-    margin: 0;
+    @include last-child-no-margin-bottom;
+    margin: $figure-margin;
 }
 
 figcaption {
