Change unit from `em` to `rem`

--- a/src/assets/scss/abstracts/variables/_forms.scss
+++ b/src/assets/scss/abstracts/variables/_forms.scss
@@ -54,5 +54,5 @@ $select-background-size: 1rem 0.75rem !default;
 $fieldset-margin: 0 0 1rem !default;
 
 // Legend
-$legend-margin-bottom: 0.5em !default;
+$legend-margin-bottom: 0.5rem !default;
 $legend-font-size: 1.25rem !default;
